# chloria

./: README.md
.github/workflows/: api.yml  job.yml  migration.yml
chloria-backend/: Cargo.toml  Dockerfile.dist-api  Dockerfile.dist-job  Dockerfile.dist-migration  Dockerfile.local  README.md  diesel.toml
chloria-backend/chloria-api/: Cargo.toml  README.md
chloria-backend/chloria-api/src/: main.rs  schema.rs
chloria-backend/chloria-api/src/execution/: mod.rs  workshop.rs
chloria-backend/chloria-api/src/execution/cases/: authenticate.rs  create_news_insight.rs  get_news.rs  mod.rs  read_news.rs
chloria-backend/chloria-api/src/execution/ports/: hashing_algorithm.rs  mod.rs  repository.rs
chloria-backend/chloria-api/src/infrastructure/hashing_algorithm/: argon2.rs  mod.rs
chloria-backend/chloria-api/src/infrastructure/repository/: mod.rs  postgresql.rs
chloria-backend/chloria-api/src/interface/: mod.rs  router.rs  state.rs
chloria-backend/chloria-api/src/interface/adapters/: auth.rs  get_news.rs  mod.rs  news.rs  read_news.rs
chloria-backend/chloria-job/: Cargo.toml  diesel.toml
chloria-backend/chloria-job/migrations/2025-02-17-120745_create_news/: down.sql
chloria-backend/chloria-job/src/: main.rs  schema.rs
chloria-backend/chloria-job/src/domain/: file.rs  mod.rs  news.rs
chloria-backend/chloria-job/src/execution/: factory.rs  mod.rs  workshop.rs
chloria-backend/chloria-job/src/execution/cases/: collect_news.rs  mod.rs
chloria-backend/chloria-job/src/execution/ports/: file_storage.rs  http_helper.rs  mod.rs  news_fetcher.rs  repository.rs
chloria-backend/chloria-job/src/execution/tasks/: mod.rs  save_news.rs
chloria-backend/chloria-job/src/infrastructure/: minio.rs  mod.rs  newsdata.rs  postgresql.rs  reqwest.rs
chloria-backend/chloria-job/src/infrastructure/file_storage/: minio.rs
chloria-backend/chloria-job/src/infrastructure/news_fetcher/: mod.rs  newsdata.rs  yahoo.rs
chloria-backend/chloria-job/src/infrastructure/repository/: postgresql.rs
chloria-backend/chloria-job/src/interface/: commander.rs  config.rs  mod.rs
chloria-backend/migrations/2025-02-17-120745_create_news/: up.sql
chloria-backend/migrations/2025-02-28-145653_create_clients/: down.sql  up.sql
chloria-backend/migrations/2025-03-29-042604_create_news_insights/: down.sql  up.sql
deployment-local/: compose.yaml  local.env
minio-operator/: Dockerfile.local  main.py  pyproject.toml  run.sh
minio-tenant/: Dockerfile.local  setup-buckets.sh
