[project]
name = "minio-operator"
version = "0.1.0"
description = ""
authors = [{ name = "Metal Whale", email = "metalwhale.dev@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["boto3 (>=1.36.3,<2.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
