[package]
name = "chloria-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
diesel = { version = "2.2.7", features = ["postgres"] }
jsonwebtoken = "9.3.1"
serde = "1.0.218"
serde_json = "1.0.140"
serde_with = "3.12.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tower = "0.5.2"
