[package]
name = "chloria-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.86"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
diesel = { version = "2.2.7", features = ["postgres", "r2d2"] }
jsonwebtoken = "9.3.1"
mockall = "0.13.1"
serde = "1.0.218"
serde_json = "1.0.140"
serde_with = "3.12.0"
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tower = "0.5.2"
