[package]
name = "chloria-job"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
chrono = "0.4.39"
chrono-tz = "0.10.1"
diesel = { version = "2.2.7", features = ["chrono", "postgres", "r2d2"] }
env_logger = "0.11.6"
futures = "0.3.31"
log = "0.4.25"
minio = "0.1.0"
mockall = "0.13.1"
rand = "0.9.0"
reqwest = "0.12.12"
serde = "1.0.217"
serde-xml-rs = "0.6.0"
serde_json = "1.0.138"
tokio = "1.43.0"
